--- a/views/index.erb
+++ b/views/index.erb
@@ -20,9 +20,12 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Fuzzy Finder.</p>
-        <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
-
+        <div class="wrapper">
+          <div class="search">
+            <h1>Fuzzy Finder.</h1>
+            <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
+          </div>
+        </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
