--- a/views/index.erb
+++ b/views/index.erb
@@ -10,9 +10,9 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="js/scripts.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -22,15 +22,11 @@
         <!-- Add your site or application content here -->
         <div class="wrapper">
           <div class="search">
-            <h1>Fuzzy Finder.</h1>
+            <h1>FuzzyFinder</h1>
             <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
+            <div class="results"></div>
           </div>
         </div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
