--- a/views/index.erb
+++ b/views/index.erb
@@ -11,6 +11,7 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
         <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
         <script src="js/scripts.js"></script>
     </head>
@@ -22,7 +23,7 @@
         <!-- Add your site or application content here -->
         <div class="wrapper">
           <div class="search">
-            <h1>FuzzyFinder</h1>
+            <h1>Fuzzy-Finder</h1>
             <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
             <div class="results"></div>
           </div>
