--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,7 +10,7 @@ body {
   padding: 10%;
 }
 .search {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -24,5 +24,16 @@ body {
   text-align:center;
   margin-bottom: 30px;
 }
-
-
+#file {
+  position: relative;
+}
+.search {
+  overflow: hidden;
+}
+.url-result {
+  font-size: 10px;
+  width: 50%;
+}
+.results {
+  float: right;
+}
