--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
-        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
         <script src="js/scripts.js"></script>
     </head>
     <body>
@@ -26,18 +26,10 @@
             <h1>Fuzzy-Finder</h1>
             <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
             <div class="results"></div>
+            <div id="file"></div>
           </div>
         </div>
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+      </body>
 </html>
 
 
