--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+/*
 body {
   background-color: rgb(100, 100, 100);
 }
@@ -16,6 +17,7 @@ body {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
 #search-bar {
   width: 250px;
   height: 40px;
