Display only first 15 results

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-/*
+
 body {
   background-color: rgb(100, 100, 100);
 }
@@ -10,6 +10,7 @@ body {
   position: relative;
   padding: 10%;
 }
+/*
 .search {
   position: relative;
   top: 50%;
@@ -17,6 +18,7 @@ body {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+*/
 
 #search-bar {
   width: 250px;
@@ -28,12 +30,20 @@ body {
 }
 #file {
   position: relative;
+  text-decoration: none;
+}
+#file li {
+  list-style: none;
+  margin: 5px;
+}
+#file li a {
+  color: rgba(255, 255, 255, 0.7); 
 }
 .search {
   overflow: hidden;
 }
 .url-result {
-  font-size: 10px;
+  font-size: 12px;
   width: 50%;
 }
 .results {
