Display number of potential matches

--- a/views/index.erb
+++ b/views/index.erb
@@ -26,6 +26,7 @@
             <h1>Fuzzy-Finder</h1>
             <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
             <div class="results"></div>
+            <span id="result-count"></span>
             <div id="file"></div>
           </div>
         </div>
