--- a/views/index.erb
+++ b/views/index.erb
@@ -24,14 +24,12 @@
         <div class="wrapper">
           <div class="search">
             <h1>Fuzzy-Finder</h1>
+            <h4>Search the top thousand websites</h1>
             <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
-            <div class="results"></div>
-            <span id="result-count"></span>
+            <div class="results"></div><br/>
+            <span id="result-count"> </span>
             <div id="file"></div>
           </div>
         </div>
       </body>
 </html>
-
-
-
