Add condition for deleted search results. Add Cabin font.

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/main.css">
-        <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Audiowide|Cabin' rel='stylesheet' type='text/css'>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
         <script src="js/scripts.js"></script>
     </head>
@@ -24,7 +24,8 @@
         <div class="wrapper">
           <div class="search">
             <h1>Fuzzy-Finder</h1>
-            <h4>Search the top thousand websites</h1>
+            <!-- <div class="border"></div> -->
+            <h5 class="description">Search the top thousand websites</h5>
             <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
             <div class="results"></div><br/>
             <span id="result-count"> </span>
