--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,16 @@
-
 body {
   background-color: rgb(100, 100, 100);
 }
 .wrapper {
   color: white;
-  font-family: Audiowide, cursive, serif;
   font-size: 1.6em;
   letter-spacing: 0.2em;
   position: relative;
   padding: 5% 10%;
+  font-family: 'Cabin', Helvetica, Arial, sans-serif;
+}
+.wrapper h1 {
+  font-family: Audiowide, cursive, serif;
 }
 /*
 .search {
@@ -42,7 +44,8 @@ body {
   list-style: none;
   margin: 5px;
 }
-#file li a {
+#file li a,
+.description {
   color: rgba(255, 255, 255, 0.7); 
 }
 .search {
@@ -54,4 +57,10 @@ body {
 }
 .results {
   float: right;
+}
+.border {
+  border-top: 2px solid rgba(255, 255, 255, 0.1);
+  margin-top: -60px;
+  float: right;
+  width: 52%;
 }
