--- a/views/index.erb
+++ b/views/index.erb
@@ -29,7 +29,7 @@
             <input id="search-bar" placeholder="Begin typing file name" width="250"></input>
             <div class="results"></div><br/>
             <span id="result-count"> </span>
-            <div id="file"></div>
+            <div id="urlList"></div>
           </div>
         </div>
       </body>
