--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,9 @@
 body {
   background-color: rgb(100, 100, 100);
 }
+*:focus {
+  outline: 0;
+}
 .wrapper {
   color: white;
   font-size: 1.6em;
@@ -12,16 +15,6 @@ body {
 .wrapper h1 {
   font-family: Audiowide, cursive, serif;
 }
-/*
-.search {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-*/
-
 #search-bar {
   width: 250px;
   height: 40px;
@@ -30,7 +23,7 @@ body {
   text-align:center;
   margin-bottom: 30px;
 }
-#file {
+#urlList {
   position: relative;
   text-decoration: none;
   height: 200px;
@@ -40,11 +33,11 @@ body {
   margin-top: 10px;
   overflow:auto;
 }
-#file li {
+#urlList li {
   list-style: none;
   margin: 5px;
 }
-#file li a,
+#urlList li a,
 .description {
   color: rgba(255, 255, 255, 0.7); 
 }
